# CareerPilot-BE

./: .gitignore  README.md  SETUP.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
agents/: advisor_agent.py  embedding_agent.py  ingestion_agent.py  pdf_generator_agent.py
backend/: README.md  main.py  pyproject.toml  requirements.txt
backend/ats_checker/: models.py  router.py
backend/interview_prep/: models.py  router.py  sessions_store.py
backend/mock_interview/: models.py  router.py
backend/portfolio_api/: POSTMAN_GUIDE.md  __init__.py  models.py  router.py
backend/resume_matcher/: models.py  router.py
core/: ats.py  embedding.py  llm_interface.py  pdf_generator.py  report_generator.py  utils.py
data/output/: Tailored_CV_20251110_CV.md
mock_interview/: audio_processor.py  interview_analyzer.py  question_generator.py  report_generator.py
portfolio_builder/: WORKFLOW_GUIDE.md  __init__.py  app.py
portfolio_builder/agents/: __init__.py
portfolio_builder/core/: __init__.py  graph.py  llm_config.py  logger.py  prompts.py  routing.py  state.py
portfolio_builder/services/: __init__.py  file_service.py  preview_service.py  resume_parser.py
portfolio_builder/storage/: README.md
portfolio_builder/utils/: __init__.py  file_utils.py  helpers.py  text_cleaner.py
rag_core/: create_mock_data.py  rag_loader.py  redis_client.py  retriever.py  vectorstore_builder.py
ui/: ats_checker_ui.py  interview_prep_ui.py  mock_interview_ui.py  resume_match_ui.py
workflows/: ats_flow.py  resume_match_pipeline.py
(+192 files in other folders)
